k8s/backend-deployment-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-local
  namespace: sungho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-local
  template:
    metadata:
      labels:
        app: backend-local
    spec:
      containers:
      - name: backend
        image: aks-demo-backend:local
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: sungho
spec:
  type: ClusterIP
  selector:
    app: backend-local
  ports:
  - port: 5000
    targetPort: 5000
