k8s/frontend-deployment-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-local
  namespace: sungho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-local
  template:
    metadata:
      labels:
        app: frontend-local
    spec:
      containers:
      - name: frontend
        image: ghcr.io/hadonas/aks-demo-frontend:local
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: sungho
spec:
  type: NodePort
  selector:
    app: frontend-local
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
